--- a/assets/styles/index.scss
+++ b/assets/styles/index.scss
@@ -1,2 +1,13 @@
 $icon-font-path: '~bootstrap-sass/assets/fonts/bootstrap/';
 @import '~bootstrap-sass/assets/stylesheets/bootstrap';
+
+$white: #fff;
+
+.divclass.h1 {
+
+}
+& > this {
+
+}
+
+.divclass.h2
