Commit last changes from training

--- a/assets/styles/index.scss
+++ b/assets/styles/index.scss
@@ -3,11 +3,11 @@ $icon-font-path: '~bootstrap-sass/assets/fonts/bootstrap/';
 
 $white: #fff;
 
-.divclass.h1 {
+// .divclass.h1 {
+//
+// // }
+// // & > this {
+// //
+// // }
 
-}
-& > this {
-
-}
-
-.divclass.h2
+// .divclass.h2
